base/src/test/resources/failure/patterns/issue681.aya.txt
In file $FILE:32:4 ->

  30 | 
  31 | def +-assoc : Pi (x y z : Nat) -> x + (y + z) = (x + y) + z
  32 |   | zero, y, z => idp
           ^--^

Error: There is no parameter for the pattern
         zero
       to match against, given the return type
         Π (x : Nat) → Π (y : Nat) → Π (z : Nat) → Eq {Nat} (add x (add y z)) (add
        (add x y) z)
       (and in case it's a function type, you may want to move its parameters before
       the `:` in the signature)
In file $FILE:32:10 ->

  30 | 
  31 | def +-assoc : Pi (x y z : Nat) -> x + (y + z) = (x + y) + z
  32 |   | zero, y, z => idp
                 ^^

Error: There is no parameter for the pattern
         y
       to match against, given the return type
         Π (x : Nat) → Π (y : Nat) → Π (z : Nat) → Eq {Nat} (add x (add y z)) (add
        (add x y) z)
       (and in case it's a function type, you may want to move its parameters before
       the `:` in the signature)
In file $FILE:32:13 ->

  30 | 
  31 | def +-assoc : Pi (x y z : Nat) -> x + (y + z) = (x + y) + z
  32 |   | zero, y, z => idp
                    ^^

Error: There is no parameter for the pattern
         z
       to match against, given the return type
         Π (x : Nat) → Π (y : Nat) → Π (z : Nat) → Eq {Nat} (add x (add y z)) (add
        (add x y) z)
       (and in case it's a function type, you may want to move its parameters before
       the `:` in the signature)
In file $FILE:32:18 ->

  30 | 
  31 | def +-assoc : Pi (x y z : Nat) -> x + (y + z) = (x + y) + z
  32 |   | zero, y, z => idp
                         ^-^

Error: Cannot check the expression of type
         Π (a : Nat) → Path (λ _ ⇒ Nat) a a
         (Normalized: Π (a : Nat) → Path (λ _ ⇒ Nat) a a)
       against the type
         Π (x : Nat) → Π (y : Nat) → Π (z : Nat) → Eq {Nat} (add x (add y z)) (add
        (add x y) z)
         (Normalized: Π (x : Nat) → Π (y : Nat) → Π (z : Nat) → Path (λ i ⇒ Nat)
        (add x (add y z)) (add (add x y) z))
In file $FILE:33:4 ->

  31 | def +-assoc : Pi (x y z : Nat) -> x + (y + z) = (x + y) + z
  32 |   | zero, y, z => idp
  33 |   | suc x, y, z => pmap suc (+-assoc x y z)
           ^---^

Error: There is no parameter for the pattern
         suc x
       to match against, given the return type
         Π (x : Nat) → Π (y : Nat) → Π (z : Nat) → Eq {Nat} (add x (add y z)) (add
        (add x y) z)
       (and in case it's a function type, you may want to move its parameters before
       the `:` in the signature)
In file $FILE:33:11 ->

  31 | def +-assoc : Pi (x y z : Nat) -> x + (y + z) = (x + y) + z
  32 |   | zero, y, z => idp
  33 |   | suc x, y, z => pmap suc (+-assoc x y z)
                  ^^

Error: There is no parameter for the pattern
         y
       to match against, given the return type
         Π (x : Nat) → Π (y : Nat) → Π (z : Nat) → Eq {Nat} (add x (add y z)) (add
        (add x y) z)
       (and in case it's a function type, you may want to move its parameters before
       the `:` in the signature)
In file $FILE:33:14 ->

  31 | def +-assoc : Pi (x y z : Nat) -> x + (y + z) = (x + y) + z
  32 |   | zero, y, z => idp
  33 |   | suc x, y, z => pmap suc (+-assoc x y z)
                     ^^

Error: There is no parameter for the pattern
         z
       to match against, given the return type
         Π (x : Nat) → Π (y : Nat) → Π (z : Nat) → Eq {Nat} (add x (add y z)) (add
        (add x y) z)
       (and in case it's a function type, you may want to move its parameters before
       the `:` in the signature)
In file $FILE:33:19 ->

  31 | def +-assoc : Pi (x y z : Nat) -> x + (y + z) = (x + y) + z
  32 |   | zero, y, z => idp
  33 |   | suc x, y, z => pmap suc (+-assoc x y z)
                          ^---------------------^

Error: Cannot check the expression of type
         Path (λ _ ⇒ Nat) (suc (+-assoc x y z.at left)) (suc (+-assoc x y z.at right))
         (Normalized: Path (λ _ ⇒ Nat) (suc (add x (add y z))) (suc (add (add x y)
        z)))
       against the type
         Π (x : Nat) → Π (y : Nat) → Π (z : Nat) → Eq {Nat} (add x (add y z)) (add
        (add x y) z)
         (Normalized: Π (x : Nat) → Π (y : Nat) → Π (z : Nat) → Path (λ i ⇒ Nat)
        (add x (add y z)) (add (add x y) z))
What are you doing?
